syntax = "proto3";

option csharp_namespace = "MiniProject1.ClassLib.Protos";

package course;

import "objects.proto";
import "google/protobuf/empty.proto";

service CourseProto {
    rpc GetAllCourses (google.protobuf.Empty) returns (AllCoursesReply);
    rpc GetCourseById (CourseRequest) returns (CourseReply);
    rpc AddCourse (CourseReply) returns (CourseReply);
}

message CourseRequest {
    int32 id = 1;
}

message CourseReply {
    int32 id = 1;
    objects.CourseObj courseObj = 2;
}

message AllCoursesReply {
    repeated objects.CourseObj courses = 1;
}